composer靠杯我名字沒打好

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "Kai\\KaiLearnComposer": "src/"
+            "Kai\\KaiLearnComposer\\": "src/"
         }
     }
 }
